css/style.css
/*reset*/

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: Arial, Helvetica, sans-serif;
}

ul, ol, menu {
    list-style: none;
}

img {
    max-width: 100%;
}

figure > img {
    display: block;
    width: 100%;
}

.section {
    padding: 80px 0;
}

.container {
    max-width: 800px;
    margin: 0 auto;
}

.row {
    display: flex;
    flex-wrap: wrap;
}

.col-4 {
    flex-basis: calc((100% / 12) * 4);
}

.row > [class^='col'] {
    padding: 20px;
}

.brand {
    font-size: 9px;
}

.clothes {
    font-size: 10px;
}

.price {
    font-size: 9px;
    color: red;
}

.price-barr {
    font-size: 9px;
    text-decoration: line-through;
}

